<resources>
    <string name="app_name">InstaPet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mainrv">Buscar usuario</string>
    <string name="title_activity_detail">Detail</string>
    <string name="a">Our Terms And Policies</string>
    <string name="b">You must use our Services according to our Terms and policies. If you violate our Terms or policies, we may take action with respect to your account, including disabling or suspending your account and, if we do, you must not create another account without our permission.</string>
    <string name="c">Legal And Acceptable Use</string>
    <string name="d">You must access and use our Services only for legal, authorized, and acceptable purposes. You will not use (or assist others in using) our Services in ways that: (a) violate, misappropriate, or infringe the rights of InstaPet, our users, or others, including privacy, publicity, intellectual property, or other proprietary rights; (b) are illegal, obscene, defamatory, threatening, intimidating, harassing, hateful, racially or ethnically offensive, or instigate or encourage conduct that would be illegal or otherwise inappropriate, including promoting violent crimes; (c) involve publishing falsehoods, misrepresentations, or misleading statements; (d) impersonate someone; (e) involve sending illegal or impermissible communications, such as bulk messaging, auto-messaging, auto-dialing, and the like; or (f) involve any non-personal use of our Services unless otherwise authorized by us.</string>
    <string name="e">Harm To InstaPet Or Our Users</string>
    <string name="f">You must not (or assist others to) directly, indirectly, through automated or other means access, use, copy, adapt, modify, prepare derivative works based upon, distribute, license, sublicense, transfer, display, perform, or otherwise exploit our Services in impermissible or unauthorized manners, or in ways that burden, impair, or harm us, our Services, systems, our users, or others, including that you must not directly or through automated means: (a) reverse engineer, alter, modify, create derivative works from, decompile, or extract code from our Services; (b) send, store, or transmit viruses or other harmful computer code through or onto our Services; (c) gain or attempt to gain unauthorized access to our Services or systems; (d) interfere with or disrupt the safety, security, or performance of our Services; (e) create accounts for our Services through unauthorized or automated means; (f) collect the information of or about our users in any impermissible or unauthorized manner; (g) sell, resell, rent, or charge for our Services in an unauthorized manner; (h) distribute or make our Services available over a network where they could be used by multiple devices at the same time, except as authorized through tools we have expressly provided via our Services; or (i) create software or APIs that function substantially the same as our Services and offer them for use by third parties in an unauthorized manner.</string>
    <string name="g">Keeping Your Account Secure</string>
    <string name="h">You are responsible for keeping your device and your InstaPet account safe and secure, and you must notify us promptly of any unauthorized use or security breach of your account or our Services.</string>
    <string name="i">Your Rights</string>
    <string name="j">InstaPet does not claim ownership of the information that you submit for your InstaPet account or through our Services. You must have the necessary rights to such information that you submit for your InstaPet account or through our Services and the right to grant the rights and licenses in our Terms.</string>
    <string name="k">InstaPet Rights</string>
    <string name="l">We own all copyrights, trademarks, domains, logos, trade dress, trade secrets, patents, and other intellectual property rights associated with our Services. You may not use our copyrights, trademarks, domains, logos, trade dress, patents, or other intellectual property rights unless you have our express permission and except in accordance with our Brand Guidelines. You may use the trademarks of our affiliated companies only with their permission, including as authorized in any published brand guidelines.</string>
    <string name="m">Your License To InstaPet</string>
    <string name="n">In order to operate and provide our Services, you grant InstaPet a worldwide, non-exclusive, royalty-free, sublicensable, and transferable license to use, reproduce, distribute, create derivative works of, display, and perform the information (including the content) that you upload, submit, store, send, or receive on or through our Services. The rights you grant in this license are for the limited purpose of operating and providing our Services (such as to allow us to display your profile picture and status message, transmit your messages, store your undelivered messages on our servers for up to 30 days as we try to deliver them, and otherwise as described in our Privacy Policy).</string>
    <string name="o">InstaPet License To You</string>
    <string name="p">We grant you a limited, revocable, non-exclusive, non-sublicensable, and non-transferable license to use our Services, subject to and in accordance with our Terms. This license is for the sole purpose of enabling you to use our Services in the manner permitted by our Terms. No licenses or rights are granted to you by implication or otherwise, except for the licenses and rights expressly granted to you.</string>
    <string name="q">Reporting Third-Party Copyright, Trademark, And Other Intellectual Property Infringement</string>
    <string name="r">To report claims of third-party copyright, trademark, or other intellectual property infringement, please visit our Intellectual Property Policy. We may take action with respect to your account, including disabling or suspending your account, if you infringe the intellectual property rights of others.</string>

</resources>
